# bevy-toadbox

./: Cargo.toml  LICENSE-MIT  README.md
assets/shaders/: fadematerial.wgsl
examples/: bootscreen.rs  fadeshader.rs  mainmenu.rs
src/: boot.rs  fadeshader.rs  lib.rs  mainmenu.rs
