[package]
name = "bevy-toadbox"
version = "0.1.1"
edition = "2021"
description = "An opinionated collection of resources and systems for the bevy game engine."
keywords = ["bevy"]
categories = ["bevy"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/theseatoad/bevy-toadbox"
homepage = "https://github.com/theseatoad/bevy-toadbox"

[dependencies]
bevy = { version = "0.9.1" }
[[example]]
name = "bootscreen"
path = "examples/bootscreen.rs"