[package]
name = "bevy-toadbox"
version = "0.1.1"
edition = "2021"
description = "An opinionated collection of resources and systems for the bevy game engine."
keywords = ["bevy"]
categories = ["bevy"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/theseatoad/bevy-toadbox"
homepage = "https://github.com/theseatoad/bevy-toadbox"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy_asset_loader = { git = "https://github.com/NiklasEi/bevy_asset_loader", branch = "bevy_main" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[[example]]
name = "bootscreen"
path = "examples/bootscreen.rs"

[[example]]
name = "fadeshader"
path = "examples/fadeshader.rs"

[[example]]
name = "mainmenu"
path = "examples/mainmenu.rs"
